tests/Asm/negative/vtest005.jva
-- missing return

function main() {
  push 1;
  push 2;
  add;
}
